microservices_python/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "python-deployment"
  namespace: "default"
  labels:
    app: "python-deployment"
spec:
  replicas: 1
  selector:
    matchlabels:
      app: "python-deployment"
  template:
    metadata:
      labels:
        app: "python-deployment"
    spec:
      containers:
        - image: "gcr.io/pathpresenterresearch/python-docker:latest"
          imagePullPolicy: Always
          name: "python-docker-container"
          ports:
            - containerPort: 5000
