microservices_python/service.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "python-service"
  namespace: "default"
  labels:
    app: "python-deployment"
spec:
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  selector:
    app: "python-deployment"
  type: "LoadBalancer"
  loadBalancerIP: ""
