microservices_python/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "ingress-python"
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: "python-service"
      port:
        number: 5000
  tls:
  - secretName: "ingress-secret"
status:
  loadBalancer: {}
